# sparkschema

./: LICENSE  README.md  justfile  pyproject.toml
sparkschema/: spark_schema.py
tests/: test_spark_schema.py
