[tool.poetry]
name = "sparkschema"
version = "0.1.0"
description = ""
authors = ["Machiel <machielg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
pytest-spark = "^0.6.0"
chispa = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
